- Added comprehensive validation for address fields in the add and edit forms to ensure required data is provided. - Implemented error handling to display validation messages for user feedback. - Updated the UI for better user experience, including new icons and improved layout for address cards. - Enhanced responsiveness and styling for modals and buttons to align with overall design standards.

--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -146,13 +146,12 @@
   }
 }
 @media only screen and (max-width: 768px) {
-   
   .z_modal-product-img {
-  border-top-left-radius: 0px !important;
-  border-bottom-left-radius: 0px !important;
-  max-height: 300px !important ;
-  object-fit: fill !important;
-}
+    border-top-left-radius: 0px !important;
+    border-bottom-left-radius: 0px !important;
+    max-height: 300px !important ;
+    object-fit: fill !important;
+  }
 }
 
 @media only screen and (max-width: 768px) {
@@ -176,11 +175,11 @@
     height: 100%;
   }
   .z_modal-product-img {
-  border-top-left-radius: 0px;
-  border-bottom-left-radius: 0px;
-  max-height: 300px !important;
-  object-fit: fill !important;
-}
+    border-top-left-radius: 0px;
+    border-bottom-left-radius: 0px;
+    max-height: 300px !important;
+    object-fit: fill !important;
+  }
 }
 
 @media only screen and (max-width: 576px) {
@@ -1382,17 +1381,16 @@
     margin: auto;
     margin-bottom: 10px !important;
   }
-  .z_modal-quantity-container{
+  .z_modal-quantity-container {
     display: block !important;
   }
-  .z_modal-content{
+  .z_modal-content {
     padding: 1rem !important;
     font-size: small;
   }
-  .z_modal-quantity-selector{
+  .z_modal-quantity-selector {
     justify-content: center;
-        width: 100% !important;
-
+    width: 100% !important;
   }
   .z_modal-add-cart-btn {
     width: 100% !important;
@@ -2311,8 +2309,10 @@
   object-fit: cover;
 }
 
-.z_modal-product-img , .modal-img-wrapper {
+.z_modal-product-img,
+.modal-img-wrapper {
   height: 100% !important;
+  object-fit: cover !important;
 }
 .z_modal-discount-badge {
   position: absolute;
@@ -2557,7 +2557,7 @@
   .z_modal-content {
     padding: 1rem;
     font-size: small;
-}
+  }
 }
 
 @media (max-width: 576px) {
